--- a/src/Debouncer.csproj
+++ b/src/Debouncer.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <PackageId>FIV.Debouncer</PackageId>
     <RootNamespace>ButtonDebouncer</RootNamespace>
-    <Version>0.0.1.1</Version>
-    <RepositoryUrl>https://gitverse.ru/grugu/Debouncer</RepositoryUrl> 
+    <Version>1.0.0</Version>
+    <RepositoryUrl>https://github.com/IvanFedirko/Debouncer</RepositoryUrl> 
     <RepositoryType>git</RepositoryType> 
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
